  * Updated upstream tarball creator (debian/upstream.sh).
  * Upgraded to debhelper compatibility level 5.
  * Reindent debian/copyright.
  * Make debian/patch.mk privide an unpatch target. Switch patch to single
    colon target.

  [ Aurelien Jarno ]
  * Bump Standard-Versions to 3.8.0 (no changes).
  * Fix debian/copyright.
  * Don't ignore make clean errors.
  * Remove .pc/ on clean.

 -- Guillem Jover <guillem@debian.org>  Tue, 08 Jan 2008 10:24:57 +0100

ufsutils (0.0+2004.06.26-4) experimental; urgency=low

  * Fix integer overflow on get_block_device_size on GNU/Linux.
    - debian/patches/00_libport.patch

 -- Guillem Jover <guillem@debian.org>  Sun,  4 Jul 2004 12:25:17 +0200

ufsutils (0.0+2004.06.26-3) experimental; urgency=low

  * Fix get_block_device_size for real on kFreeBSD, it was returning the
    whole disk size. And add to it Hurd support.
    - debian/patches/00_libport.patch
  * Build with LFS support.
    - debian/patches/99_makefiles.patch

 -- Guillem Jover <guillem@debian.org>  Wed, 30 Jun 2004 16:02:34 +0200

ufsutils (0.0+2004.06.26-2) experimental; urgency=low

  * Create a portable get_block_device_size to fix mkfs.ufs on all versions
    of kFreeBSD.
    - debian/patches/00_port.patch
    - debian/patches/99_makefiles.patch
  * Splitted and merged patches, more fine grained:
    - debian/patches/00_port.patch: Renamed to ...
    - debian/patches/00_libport.patch: ... this. Moved subdirectory specific
      patches into their own patch.
    - debian/patches/99_makefiles.patch: Likewise.
    - debian/patches/01_libufs.patch: New file. Merge from the two previous
      patches specific parts.
    - debian/patches/02_badsect.ufs.patch: Likewise.
    - debian/patches/02_bsdlabel.ufs.patch: Likewise.
    - debian/patches/02_dumpfs.ufs.patch: Likewise.
    - debian/patches/02_dump.ufs.patch: Likewise.
    - debian/patches/02_ffsinfo.patch: Likewise.
    - debian/patches/02_fsck.ufs.patch: Likewise.