@@ -17,7 +17,7 @@ DEB_HOST_ARCH_OS = $(shell dpkg-architecture -qDEB_HOST_ARCH_OS)
 
 # on GNU/kFreeBSD we need additional library
 ifeq (kfreebsd,$(DEB_HOST_ARCH_OS))
-LDADD += -lbsd -lfreebsd
+LDADD += -lfreebsd
 else
 # really only on other systems, as GNU/kFreeBSD already have off_t 64bit
 # on GNU/kFreeBSD it must not be enabled, as it would change size of ino_t
@@ -101,7 +101,11 @@ binary-arch: build install
 	dh_makeshlibs
 	dh_installdeb
 	dh_shlibdeps -ldebian/$(libufs)/usr/lib -L$(libufs)
+ifeq (kfreebsd,$(DEB_HOST_ARCH_OS))
+	dh_gencontrol -- -DPriority=required
+else
 	dh_gencontrol
+endif
 	dh_md5sums
 	dh_builddeb
 
