@@ -23,6 +23,7 @@ ufsutils (7.0-1) UNRELEASED; urgency=low
   * Fix debian/copyright.
   * Don't ignore make clean errors.
   * Remove .pc/ on clean.
+  * Set the priority to required on GNU/kFreeBSD, optional on other systems.
 
  -- Guillem Jover <guillem@debian.org>  Tue, 08 Jan 2008 10:24:57 +0100
 
